# async_blog_crawl

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt  run.py
config/: settings.py
design/: demo.md
design/response/: article.json  classify.json  classify_month.json  section.json
src/: __init__.py  main.py
src/api/: app.py  dependencies.py
src/api/routers/: crawl.py  monitor.py  verify.py  watch.py
src/crawler/: base_crawler.py  classify_monitor.py  content_fetcher.py  month_data_fetcher.py
src/services/: monitor.py  verification.py
src/utils/: http_client.py  logger.py  models.py
tests/: smoke_offline.py
