[project]
name = "blog-crawl"
version = "0.1.0"
description = "Blog crawler with FastAPI API, async fetching, and offline stubs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn==0.30.6",
    "aiohttp>=3.10.10,<4.0.0",
    "aiofiles==23.2.1",
    "pydantic>=2.9.2,<3.0.0",
    "loguru==0.7.2",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "config",
  "design",
  "main.ps1",
  "README.md",
  "pyproject.toml",
]
